feat: Add FindOneHandler
