# service-gateway/pkg/api/rest/operations/access/remove_one_urlbuilder.go
@@ -42,7 +42,7 @@ func (o *RemoveOneURL) SetBasePath(bp string) {
 func (o *RemoveOneURL) Build() (*url.URL, error) {
 	var result url.URL
 
-	var _path = "/{id}"
+	var _path = "/access/{id}"
 
 	id := swag.FormatInt64(o.ID)
 	if id != "" {
